testsuite/poke.pkl/struct-method-diag-15.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    var v = 10;

    method foo = (int i = v) int: /* { dg-error "invalid.*variable" } */
      {
        return i;
      }
  };
